# puzzle-solver

./: .gitignore  README.md  character_table_defaults.yaml  main.py  pyproject.toml  rxconfig.py  test.py
assets/: character_table_defaults.yaml
assets/puzzles/: puzzle-1.yaml  puzzle-2.yaml  puzzle-3.yaml  puzzle-4.yaml  puzzle-5.yaml  puzzle-6.yaml
src/frontend/: frontend.py
src/frontend/components/: int_control.py
src/frontend/pages/character_table/: config.py  page.py  punch_card.py  state.py  table_plot.py  text_and_preprocessing.py
src/frontend/pages/frontpage/: page.py
src/frontend/pages/solver/: page.py  state.py
src/puzzle_solver/: __init__.py  api.py  cli.py  cube_solver.py  demo.py  flat_solver.py  grids.py  interactive.py  plotting.py  types.py  yaml_io.py
