[project]
name = "puzzle-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gurobipy>=13.0.0",
    "numpy>=2.4.0",
    "plotly>=6.5.0",
    "pyyaml>=6.0.2",
    "reflex>=0.8.24.post1",
    "seaborn>=0.13.2",
]

[project.scripts]
main = "puzzle_solver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/puzzle_solver", "src/frontend"]
